--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.3.0",
+    "@coreui/react": "^5.7.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@fullcalendar/bootstrap": "^6.1.13",
@@ -42,6 +45,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
